basic grid settings for bourbon neat

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<head>
 
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/base.css">
+<meta charset="utf-8">
+<title>RocketEngine</title>
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-  </head>
+<!-- Stylesheets -->
+<link rel="stylesheet" href="css/base.css">
+
+</head>
 <body>
 
 <div class="container">
