modular scale type size system sass variables

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <!-- Stylesheets -->
 <link rel="stylesheet" href="css/base.css">
 
+
 </head>
 <body>
+
+
+<!-- livereload -->
+<script src="//localhost:35729/livereload.js"></script>
+
 
 <div class="container">
 
