modular scale helper classes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 
 <div class="container">
 
+<h1 class="mega-type">Heading h1</h1>
+<h2 class="huge-type">Heading h2</h2>
+<h3 class="large-type">Heading h3</h3>
+<h4 class="medium-type">Heading h4</h4>
+<h5 class="normal-type">Heading h5</h5>
 
 
 </div><!-- end container -->
