--- a/index.html
+++ b/index.html
@@ -28,6 +28,29 @@
 <h5 class="normal-type">Heading h5</h5>
 
 
+<p class="tera-type p-helper">Tera Type</p>
+
+<p class="giga-type p-helper">Giga Type</p>
+
+<p class="mega-type p-helper">Mega Type</p>
+
+<p class="huge-type p-helper">Huge Type</p>
+
+<p class="large-type p-helper">Large Type</p>
+
+<p class="medium-type p-helper">Medium Type</p>
+
+<p class="normal-type p-helper">Normal Type</p>
+
+<p class="small-type p-helper">Small Type</p>
+
+<p class="little-type p-helper">Little Type</p>
+
+<p class="tiny-type p-helper">Tiny Type</p>
+
+<p class="nano-type p-helper">Nano Type</p>
+
+
 </div><!-- end container -->
 
 </body>
