continuing to add to kitchen sink, working on typography first

--- a/index.html
+++ b/index.html
@@ -21,35 +21,41 @@
 
 <div class="container">
 
-<h1 class="mega-type">Heading h1</h1>
-<h2 class="huge-type">Heading h2</h2>
-<h3 class="large-type">Heading h3</h3>
-<h4 class="medium-type">Heading h4</h4>
-<h5 class="normal-type">Heading h5</h5>
+<h1 class="tera-type">Heading h1</h1>
+<h2 class="giga-type">Heading h2</h2>
+<h3 class="mega-type">Heading h3</h3>
+<h4 class="huge-type">Heading h4</h4>
+<h5 class="large-type">Heading h5</h5>
+<h6 class="medium-type">Heading h6</h6>
 
 
-<p class="tera-type p-helper">Tera Type</p>
+<p class="normal-type">Normal Type</p>
+<p class="small-type">Small Type</p>
+<p class="little-type">Little Type</p>
+<p class="tiny-type">Tiny Type</p>
+<p class="nano-type">Nano Type</p>
 
-<p class="giga-type p-helper">Giga Type</p>
+<p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men. It is a historical process which mankind is carrying out in accordance with the natural laws of human development.</p>
 
-<p class="mega-type p-helper">Mega Type</p>
+<p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.<p>
 
-<p class="huge-type p-helper">Huge Type</p>
+<p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.<p>
 
-<p class="large-type p-helper">Large Type</p>
+<ul>
+  <li>Unordered List Item</li>
+  <li>Unordered List Item</li>
+  <li>Unordered List Item</li>
+  <li>Unordered List Item</li>
+  <li>Unordered List Item</li>
+</ul>
 
-<p class="medium-type p-helper">Medium Type</p>
-
-<p class="normal-type p-helper">Normal Type</p>
-
-<p class="small-type p-helper">Small Type</p>
-
-<p class="little-type p-helper">Little Type</p>
-
-<p class="tiny-type p-helper">Tiny Type</p>
-
-<p class="nano-type p-helper">Nano Type</p>
-
+<ol>
+  <li>Ordered List Item</li>
+  <li>Ordered List Item</li>
+  <li>Ordered List Item</li>
+  <li>Ordered List Item</li>
+  <li>Ordered List Item</li>
+</ol>
 
 </div><!-- end container -->
 
