leftover files and removing bourbon neat

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!-- Stylesheets -->
 <link rel="stylesheet" href="css/base.css">
 
+<link rel="stylesheet" type="text/css" href="//cloud.typography.com/7476632/761322/css/fonts.css" />
 
 </head>
 <body>
@@ -20,6 +21,8 @@
 
 
 <div class="container">
+
+<p class="logo medium-type">RocketEngine</p>
 
 <h1 class="tera-type">Heading h1</h1>
 <h2 class="giga-type">Heading h2</h2>
