--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 <!-- Stylesheets -->
-<link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="rocketengine/css/base.css">
 
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
 
